snake game easter egg added

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,14 @@ footer p{
     object-fit: cover;
     height: 220px;
 }
+
+#easterEgg1, #easterEgg2, #easterEgg3 {
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    /*optional*/
+    font-family: arial, sans-serif;
+    /*input has OS specific font-family*/
+    color: black;
+    cursor: pointer;
+}
